--- a/Views/Customers/Create.cshtml
+++ b/Views/Customers/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@model BankEntities.Customer
+@using Microsoft.AspNetCore.Identity
 
 @{
     ViewData["Title"] = "Create";
@@ -29,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="email" class="control-label"></label>
-                <input asp-for="email" class="form-control" />
+                <input asp-for="email" class="form-control" value=@User.Identity.Name />
                 <span asp-validation-for="email" class="text-danger"></span>
             </div>
             <div class="form-group">
