--- a/Views/Businesses/Create.cshtml
+++ b/Views/Businesses/Create.cshtml
@@ -13,24 +13,24 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
+                @*<label asp-for="CustomerId" class="control-label"></label>
                 <input asp-for="CustomerId" class="form-control" />
-                <span asp-validation-for="CustomerId" class="text-danger"></span>
+                <span asp-validation-for="CustomerId" class="text-danger"></span>*@
             </div>
             <div class="form-group">
-                <label asp-for="InterestRate" class="control-label"></label>
+                @*<label asp-for="InterestRate" class="control-label"></label>
                 <input asp-for="InterestRate" class="form-control" />
-                <span asp-validation-for="InterestRate" class="text-danger"></span>
+                <span asp-validation-for="InterestRate" class="text-danger"></span>*@
             </div>
             <div class="form-group">
-                <label asp-for="Balance" class="control-label"></label>
+                <label asp-for="Balance" class="control-label">How much would you like to deposit in you business account?</label>
                 <input asp-for="Balance" class="form-control" />
                 <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="type" class="control-label"></label>
+                @*<label asp-for="type" class="control-label"></label>
                 <input asp-for="type" class="form-control" />
-                <span asp-validation-for="type" class="text-danger"></span>
+                <span asp-validation-for="type" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
