--- a/Views/Checkings/Create.cshtml
+++ b/Views/Checkings/Create.cshtml
@@ -18,17 +18,17 @@
                 
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <input asp-for="CustomerId" class="form-control" />
+                
+                <input hidden asp-for="CustomerId" class="form-control" value="2" />
                 <span asp-validation-for="CustomerId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InterestRate" class="control-label"></label>
-                <input asp-for="InterestRate" class="form-control" />
+                
+                <input hidden asp-for="InterestRate" class="form-control" value="2.2" />
                 <span asp-validation-for="InterestRate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Balance" class="control-label"></label>
+                <label asp-for="Balance" class="control-label">How much would you like to deposit into this account?</label>
                 <input asp-for="Balance" class="form-control" />
                 <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
