--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,8 +11,8 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-<h3>@ViewData["Message"]</h3>
-
+<h3>Welcome to the Bank</h3>
+<h3>Login or create an account to get started</h3>
 @{
 
 
