--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
                         </li>
                         <li class="nav-item">
@@ -43,7 +43,7 @@
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Term" asp-action="Index">Term</a>
-                        </li>
+                        </li>*@
 
                     </ul>
                 </div>
