--- a/Views/Loans/MyLoan.cshtml
+++ b/Views/Loans/MyLoan.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<BankEntities.Checking>
+﻿@model IEnumerable<BankEntities.Loan>
 
 @{
-    ViewData["Title"] = "MyChecking";
+    ViewData["Title"] = "MyLoan";
 }
 
-<h1>MyChecking</h1>
+<h1>MyLoan</h1>
 
 <p>
     @*<a asp-action="Create">Create New</a>*@
@@ -13,9 +13,6 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.type)
             </th>
@@ -35,9 +32,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.type)
             </td>
             <td>
@@ -51,10 +45,8 @@
             </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                <a asp-action="Withdraw" asp-route-id="@item.Id">Withdraw</a> |
-                <a asp-action="Deposit" asp-route-id="@item.Id">Deposit</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
