--- a/Views/Checkings/Create.cshtml
+++ b/Views/Checkings/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 
                 <input hidden asp-for="type" class="form-control" value="checking" />
                 
@@ -26,7 +26,7 @@
                 
                 <input hidden asp-for="InterestRate" class="form-control" value="2.2" />
                 <span asp-validation-for="InterestRate" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Balance" class="control-label">How much would you like to deposit into this account?</label>
                 <input asp-for="Balance" class="form-control" />
