--- a/Views/Terms/MyTerm.cshtml
+++ b/Views/Terms/MyTerm.cshtml
@@ -7,7 +7,8 @@
 <h1>MyTerm</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 </p>
 <table class="table">
     <thead>
@@ -49,8 +50,8 @@
                 @Html.DisplayFor(modelItem => item.createdAt)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
