deposit, withdraw and transfer all working, no transaction logs yet

--- a/Views/Checkings/MyChecking.cshtml
+++ b/Views/Checkings/MyChecking.cshtml
@@ -54,7 +54,8 @@
         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
                 <a asp-action="Withdraw" asp-route-id="@item.Id">Withdraw</a> |
-                <a asp-action="Deposit" asp-route-id="@item.Id">Deposit</a>
+                <a asp-action="Deposit" asp-route-id="@item.Id">Deposit</a> |
+                <a asp-action="Transfer" asp-route-id="@item.Id">Transfer</a>
             </td>
         </tr>
 }
