--- a/Views/Terms/MyTerm.cshtml
+++ b/Views/Terms/MyTerm.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.type)
             </th>
             <th>
@@ -35,6 +38,9 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.type)
             </td>
             <td>
@@ -51,8 +57,10 @@
             </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>|
+                <a asp-action="Withdraw" asp-route-id="@item.Id">Withdraw</a> |
+                <a asp-action="Deposit" asp-route-id="@item.Id">Deposit</a>
             </td>
         </tr>
 }
