--- a/Views/Businesses/MyBusiness.cshtml
+++ b/Views/Businesses/MyBusiness.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.CustomerId)
             </th>
             <th>
@@ -32,6 +35,9 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.CustomerId)
             </td>
             <td>
@@ -45,8 +51,11 @@
             </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                <a asp-action="Withdraw" asp-route-id="@item.Id">Withdraw</a> |
+                <a asp-action="Deposit" asp-route-id="@item.Id">Deposit</a>|
+                <a asp-action="Transfer" asp-route-id="@item.Id">Transfer</a>
             </td>
         </tr>
 }
