all transactions working, all deletes have to have a /usr/bin/bash balance, no ability to view transactions for an account yet

--- a/Views/Checkings/Delete.cshtml
+++ b/Views/Checkings/Delete.cshtml
@@ -7,6 +7,7 @@
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
+<h1>@ViewData["ErrorMessage"]</h1>
 <div>
     <h4>Checking</h4>
     <hr />
