--- a/Views/Transactions/Delete.cshtml
+++ b/Views/Transactions/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.accountType)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.accountType)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.accountId)
         </dt>
         <dd class = "col-sm-10">
