--- a/Views/Terms/Delete.cshtml
+++ b/Views/Terms/Delete.cshtml
@@ -7,6 +7,8 @@
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
+
+<h1>@ViewData["ErrorMessage"]</h1>
 <div>
     <h4>Term</h4>
     <hr />
