--- a/Views/Transactions/Create.cshtml
+++ b/Views/Transactions/Create.cshtml
@@ -13,6 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="accountType" class="control-label"></label>
+                <input asp-for="accountType" class="form-control" />
+                <span asp-validation-for="accountType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="accountId" class="control-label"></label>
                 <input asp-for="accountId" class="form-control" />
                 <span asp-validation-for="accountId" class="text-danger"></span>
@@ -43,6 +48,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
