--- a/Views/Transactions/Edit.cshtml
+++ b/Views/Transactions/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="accountType" class="control-label"></label>
+                <input asp-for="accountType" class="form-control" />
+                <span asp-validation-for="accountType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="accountId" class="control-label"></label>
                 <input asp-for="accountId" class="form-control" />
                 <span asp-validation-for="accountId" class="text-danger"></span>
@@ -44,6 +49,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
