--- a/Views/Transactions/Index.cshtml
+++ b/Views/Transactions/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.accountType)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.accountId)
             </th>
             <th>
@@ -30,6 +33,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.accountType)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.accountId)
             </td>
