--- a/Views/Terms/MyTerm.cshtml
+++ b/Views/Terms/MyTerm.cshtml
@@ -57,10 +57,11 @@
             </td>
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
+        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>|
                 <a asp-action="Withdraw" asp-route-id="@item.Id">Withdraw</a> |
-                <a asp-action="Deposit" asp-route-id="@item.Id">Deposit</a>
+                <a asp-action="Deposit" asp-route-id="@item.Id">Deposit</a> |
+                <a asp-controller="Transactions" asp-action="GetLog" asp-route-id="@item.Id" asp-route-type="term">View Transaction Log</a>
             </td>
         </tr>
 }
