--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -3,11 +3,14 @@
     ViewData["Title"] = "Menu";
 }
 
-    <h1>Welcome to the Bank </h1>
 
-    <h2>@ViewData["Fname"] @ViewData["Lname"]</h2>
+    <h1 class="welcome">Welcome to the Bank </h1>
 
-    <div>
+    <h2 class="welcome">@ViewData["Fname"] @ViewData["Lname"]</h2>
+
+    <img id="piggy" src="~/piggy-bank-banner.png" />
+
+    <div class="accntDiv" id="createDiv">
         <h4>Create a new account</h4>
         <a class="nav-link text-dark" asp-area="" asp-controller="Checkings" asp-action="Create">Create Checking account</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Businesses" asp-action="Create">Create Business account</a>
@@ -16,7 +19,7 @@
     </div>  
 
 
-    <div>
+    <div class="accntDiv" id="accntDiv">
         <h4>View Existing Accounts</h4>
         @*@Html.Action("MyChecking", "Checking")*@
         @*@await Html.PartialAsync("~/Views/Checkings/MyChecking.cshtml")*@
