--- a/Views/Loans/Create.cshtml
+++ b/Views/Loans/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="InterestRate" class="text-danger"></span>*@
             </div>
             <div class="form-group">
-                <label asp-for="Balance" class="control-label">How much would you like to take borrow?</label>
+                <label asp-for="Balance" class="control-label">How much would you like to borrow?</label>
                 <input asp-for="Balance" class="form-control" />
                 <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Home" asp-action="Index">Back to Home</a>
 </div>
 
 @section Scripts {
