fixed delete redirect to action

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,8 +58,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container"><img class="logo" src="~/logo.png" />
-            &copy; 2019 - BankingApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container">
+            <img class="logo" src="~/logo.png" />
+            BankingApp  &copy; 2019 
         </div>
     </footer>
 
