bank name on menu

--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-    <h1 class="welcome">Welcome to the Bank </h1>
+    <h1 class="welcome">Welcome to  <img id="logo" src="~/logo.png" /> Bank </h1>
 
     <h2 class="welcome">@ViewData["Fname"] @ViewData["Lname"]</h2>
 
